third_party/move/move-compiler-v2/tests/lambda/inline-parity/generics.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/generics.move:16:26
   │
16 │         foreach<u64>(&v, |e| sum = sum + *e);
   │                          ^^^^^^^^^^^^^^^^^^
